# ComfyUI-Interactive

./: README.md  __init__.py  comfyui_interactive.py  interactive_example_workflow_trigger.json  interactive_example_workflow_with_parameters.json  pyproject.toml
example_workflows/: choose_your_own_combination.json  example.json  stop_and_preview.json
js/: buttons.js  script.js
