[project]
name = "comfyui-interactive"
description = "Nodes that allow making the UI interactive, with selectors, switches, triggers, etc.. Enables previewing generations at low sampling steps, then unlocking full sampling with the click of a button. Enables selecting across multiple options with the click of a button to move a workflow forward."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/lquesada/ComfyUI-Interactive"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lquesada"
DisplayName = "ComfyUI-Interactive"
Icon = ""
