[project]
name = "comfyui-interactive"
description = "Nodes that allow making the UI interactive, with selectors and switches, etc.. Enables selecting across multiple options with the click of a button to move a workflow forward."
version = "1.0.2"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/lquesada/ComfyUI-Interactive"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lquesada"
DisplayName = "ComfyUI-Interactive"
Icon = ""
